--- a/lang/xca.pot
+++ b/lang/xca.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-04-30 08:24+0200\n"
+"POT-Creation-Date: 2011-05-02 06:51+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -817,144 +817,147 @@ msgid "PEM file"
 msgstr ""
 
 #: MainWindow#42
-msgid "&Token"
+msgid "paste PEM file"
 msgstr ""
 
 #: MainWindow#43
-msgid "&Manage Security token"
+msgid "&Token"
 msgstr ""
 
 #: MainWindow#44
-msgid "&Init Security token"
+msgid "&Manage Security token"
 msgstr ""
 
 #: MainWindow#45
-msgid "&Change PIN"
+msgid "&Init Security token"
 msgstr ""
 
 #: MainWindow#46
-msgid "Change &SO PIN"
+msgid "&Change PIN"
 msgstr ""
 
 #: MainWindow#47
-msgid "Init PIN"
+msgid "Change &SO PIN"
 msgstr ""
 
 #: MainWindow#48
-msgid "&Help"
+msgid "Init PIN"
 msgstr ""
 
 #: MainWindow#49
-msgid "&Content"
+msgid "&Help"
 msgstr ""
 
 #: MainWindow#50
-msgid "&About"
+msgid "&Content"
 msgstr ""
 
 #: MainWindow#51
-msgid "Donations"
+msgid "&About"
 msgstr ""
 
 #: MainWindow#52
-msgid "Database dump ( *.dump );;All files ( * )"
+msgid "Donations"
 msgstr ""
 
 #: MainWindow#53
-msgid "Import password"
+msgid "Database dump ( *.dump );;All files ( * )"
 msgstr ""
 
 #: MainWindow#54
-msgid "Please enter the password of the old database"
+msgid "Import password"
 msgstr ""
 
 #: MainWindow#55
-msgid "Password verification error. Ignore keys ?"
+msgid "Please enter the password of the old database"
 msgstr ""
 
 #: MainWindow#56
-msgid "Import anyway"
+msgid "Password verification error. Ignore keys ?"
 msgstr ""
 
 #: MainWindow#57
-msgctxt "MainWindow#57"
-msgid "Cancel"
+msgid "Import anyway"
 msgstr ""
 
 #: MainWindow#58
-msgid "no such option: %1"
+msgctxt "MainWindow#58"
+msgid "Cancel"
 msgstr ""
 
 #: MainWindow#59
-msgid "Import PEM data"
+msgid "no such option: %1"
 msgstr ""
 
 #: MainWindow#60
-msgid "Please enter the original SO PIN (PUK) of the token '%1'"
+msgid "Import PEM data"
 msgstr ""
 
 #: MainWindow#61
-msgid "Please enter the new SO PIN (PUK) of the token '%1'"
+msgid "Please enter the original SO PIN (PUK) of the token '%1'"
 msgstr ""
 
 #: MainWindow#62
-msgid "The new label of the token '%1'"
+msgid "Please enter the new SO PIN (PUK) of the token '%1'"
 msgstr ""
 
 #: MainWindow#63
-msgid "The token '%1' did not contain any keys or certificates"
+msgid "The new label of the token '%1'"
 msgstr ""
 
 #: MainWindow#64
-msgid "New Password"
+msgid "The token '%1' did not contain any keys or certificates"
 msgstr ""
 
 #: MainWindow#65
+msgid "New Password"
+msgstr ""
+
+#: MainWindow#66
 msgid ""
 "Please enter the new password to encrypt your private keys in the database-"
 "file"
 msgstr ""
 
-#: MainWindow#66
+#: MainWindow#67
 msgid ""
 "Please enter a password, that will be used to encrypt your private keys in "
 "the database file:\n"
 "%1"
 msgstr ""
 
-#: MainWindow#67
+#: MainWindow#68
 msgid "Password verify error, please try again"
 msgstr ""
 
-#: MainWindow#68
-msgctxt "MainWindow#68"
+#: MainWindow#69
+msgctxt "MainWindow#69"
 msgid "Password"
 msgstr ""
 
-#: MainWindow#69
+#: MainWindow#70
 msgid ""
 "Please enter the password for unlocking the database:\n"
 "%1"
 msgstr ""
 
-#: MainWindow#70
+#: MainWindow#71
 msgid "The following error occured:"
 msgstr ""
 
-#: MainWindow#71
+#: MainWindow#72
 msgid "Copy to Clipboard"
 msgstr ""
 
-#: MainWindow#72
+#: MainWindow#73
 msgid ""
-"Diffie-Hellman paramters are needed for different applications. They are "
-"neither used by XCA nor stored in the database. After generating them, XCA "
-"will ask for a filename to store the DH parameters\n"
+"Diffie-Hellman parameters are needed for different applications, but not "
+"handled by XCA.\n"
 "Please enter the DH parameter bits"
 msgstr ""
 
-#: MainWindow#73
-msgctxt "MainWindow#73"
+#: MainWindow#74
+msgctxt "MainWindow#74"
 msgid "Error opening file: '%1': %2"
 msgstr ""
 
