--- a/lang/fr.po
+++ b/lang/fr.po
@@ -3292,7 +3292,7 @@ msgstr ""
 
 #: v3ext#15
 msgid ""
-"Validation successfull:\n"
+"Validation successful:\n"
 "'%1'"
 msgstr ""
 "La validation a été effectuée avec succès:\n"
