fix ASN1 encoding of PKCS#10 requests
0.9.0 behaved like "openssl req -asn1-kludge"
See: http://www.openssl.org/docs/apps/req.html

Now the PKCS#10 request comntains the non-optional, empty SET OF Attribute

Thanks to Kalev Toots (kalev.toots at eepos.ee) for spotting this.

--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 
+  * fix ASN.1 encoding of PKCS#10 request
   * Close bug [ 3318203 ] Build failure with GNU gold linker
   * Add x509v3 extensions to the list of selectable columns
   * Close bug [ 3314262 ] Incorrect "Path length" template parameter handling
