--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+xca 0.9.1 Fri Oct 21 08:13:26 2011
 
   * Close bug [ 3372449 ] All numeric names cannot be used
   * add search functionality for PKCS#11 libraries
